--- a/reddit-2/app/framework/components/redditApp-module.less
+++ b/reddit-2/app/framework/components/redditApp-module.less
@@ -30,8 +30,11 @@
       border: none;
     }
     .byline {
-      width: 15%;
-//      text-align: right;
+      width: 8%;
+    }
+    .subreddit {
+      width: 7%;
+      color: #5f9ea0;
     }
   }
   .first {
