--- a/reddit-2/app/framework/components/view/redditApp-view.html
+++ b/reddit-2/app/framework/components/view/redditApp-view.html
@@ -25,6 +25,9 @@
       <li class="byline">
         {{ item.author }}
       </li>
+      <li class="subreddit">
+        {{ item.subreddit }}
+      </li>
     </ul>
     <ul>
       <li data-ng-show="redditAppCtrl.reddit.busy">
