instagram update, youtube, disney apps

--- a/youTube/app/framework/components/youtube/view/youtube-view.html
+++ b/youTube/app/framework/components/youtube/view/youtube-view.html
@@ -1,3 +1,8 @@
 <div class="youtube-view">
-
+  <h1>loaded</h1>
+  <ul data-ng-repeat="item in youtubeCtrl.data">
+    <l1>
+      {{ item.feed.xmlns }}
+    </l1>
+  </ul>
 </div>
