--- a/disney/app/framework/components/disney-module/view/disney-view.html
+++ b/disney/app/framework/components/disney-module/view/disney-view.html
@@ -2,7 +2,7 @@
 
   <ul data-ng-repeat="item in disneyCtrl.attractionData">
     <li>
-      <h1>hello world</h1>
+      {{ item }}
     </li>
 
   </ul>
