--- a/instagram/app/app.less
+++ b/instagram/app/app.less
@@ -1,4 +1,4 @@
-//@import "../vendor/bootstrap/less/bootstrap.less";
+@import "../vendor/bootstrap/less/bootstrap.less";
 //@import "../vendor/bootstrap/less/theme.less";
 //@import "../vendor/font-awesome/less/font-awesome.less";
 //@fa-font-path: "../vendor/font-awesome/fonts";
@@ -13,4 +13,11 @@
 
 
 
+
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
 
