--- a/youTube/app/framework/components/youtube/youtube-module.less
+++ b/youTube/app/framework/components/youtube/youtube-module.less
@@ -1,3 +1,24 @@
 /* Component LESS */
 /* Add Component LESS Above */
 
+.youtube-view {
+  width: 95%;
+  margin: 0 auto;
+  padding: 0;
+
+}
+.even {
+  background-color: #CCCCCC;
+}
+ul {
+  display: inline-table;
+  width: 33%;
+  padding: 5px;
+  text-align: center;
+  height: 33vh;
+
+  li {
+    list-style-type: none;
+    padding-top: 15px;
+  }
+}
