more instagram animations

--- a/instagram/app/framework/components/instagram-module/instagram-module.less
+++ b/instagram/app/framework/components/instagram-module/instagram-module.less
@@ -120,28 +120,28 @@
   }
 
   .even.animated.ng-enter {
-    -webkit-animation: bounceInRight 1.25s;
-    -moz-animation: bounceInRight 1.25s;
-    -o-animation: bounceInRight 1.25s;
-    animation: bounceInRight 1.25s;
+    -webkit-animation: rotateInDownLeft 1.25s;
+    -moz-animation: rotateInDownLeft 1.25s;
+    -o-animation: rotateInDownLeft 1.25s;
+    animation: rotateInDownLeft 1.25s;
   }
   .even.animated.ng-leave {
-    -webkit-animation: bounceOutRight 1.25s;
-    -moz-animation: bounceOutRight 1.25s;
-    -o-animation: bounceOutRight 1.25s;
-    animation: bounceOutRight 1.25s;
+    -webkit-animation: rotateOutUpRight 1.25s;
+    -moz-animation: rotateOutUpRight 1.25s;
+    -o-animation: rotateOutUpRight 1.25s;
+    animation: rotateOutUpRight 1.25s;
   }
   .odd.animated.ng-enter {
-    -webkit-animation: bounceInLeft 1.25s;
-    -moz-animation: bounceInLeft 1.25s;
-    -o-animation: bounceInLeft 1.25s;
-    animation: bounceInLeft 1.25s;
+    -webkit-animation: rotateInUpLeft 1.25s;
+    -moz-animation: rotateInUpLeft 1.25s;
+    -o-animation: rotateInUpLeft 1.25s;
+    animation: rotateInUpLeft 1.25s;
   }
   .odd.animated.ng-leave {
-    -webkit-animation: bounceOutLeft 1.25s;
-    -moz-animation: bounceOutLeft 1.25s;
-    -o-animation: bounceOutLeft 1.25s;
-    animation: bounceOutLeft 1.25s;
+    -webkit-animation: rotateOutDownLeft 1.25s;
+    -moz-animation: rotateOutDownLeft 1.25s;
+    -o-animation: rotateOutDownLeft 1.25s;
+    animation: rotateOutDownLeft 1.25s;
   }
 
 }
