final project mvl

--- a/final-project/app/app.less
+++ b/final-project/app/app.less
@@ -7,11 +7,14 @@
 
 @import "home/home.less";
 @import "contact/contact.less";
-@import "top-rated/top-rated.less";
-@import "search/search.less";
 @import "framework/components/navigation/navigation-module.less";
 @import "strains/strains-module.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
+
+.row {
+  margin-top: 100px;
+}
