--- a/final-project/app/framework/components/navigation/navigation-module.less
+++ b/final-project/app/framework/components/navigation/navigation-module.less
@@ -1,3 +1,26 @@
 /* Component LESS */
 /* Add Component LESS Above */
 
+.navigation-view {
+  position: fixed;
+  background: #193441;
+  color: #FCFFF5;
+  width: 100%;
+  z-index: 1;
+  h1 {
+    display: inline-block;
+    width: 49%;
+  }
+  li {
+    display: inline-block;
+    margin: 10px;
+  }
+  a {
+    color: #fcfff5;
+  }
+  .nav-list {
+    display: inline-block;
+    text-align: right;
+    width: 49%;
+  }
+}
