--- a/final-project/app/framework/components/navigation/view/navigation-view.html
+++ b/final-project/app/framework/components/navigation/view/navigation-view.html
@@ -1,5 +1,5 @@
 <div class="navigation-view" data-ng-controller="navController as navCtrl">
-  <h1>WEED</h1>
+  <h1>Marijuana Strain Info</h1>
 
   <ul class="nav-list">
     <li data-ng-repeat="item in navCtrl.items">
