--- a/final-project/app/home/view/home-view.html
+++ b/final-project/app/home/view/home-view.html
@@ -1,3 +1,3 @@
 <div class="home-view">
-  <!--<h1>WEED!!</h1>-->
+  <img class="animated lightSpeedIn" src="http://divnil.com/wallpaper/iphone/img/app/b/o/bobmarleyiphonewallpaper2_642c859748a73577b1aaee99d5f69d94_raw.jpg" alt=""/>
 </div>
