--- a/final-project/app/strains/strains-module.less
+++ b/final-project/app/strains/strains-module.less
@@ -1,3 +1,96 @@
 /* Component LESS */
 /* Add Component LESS Above */
 
+.strains-view {
+  ul {
+    width: 19%;
+    margin: 0 14px 10px 0;
+    display: inline-block;
+    border: 1px solid #000;
+    border-radius: 12px;
+    text-align: center;
+    padding: 38px 0;
+    cursor: pointer;
+    &:nth-of-type(5n) {
+      margin-right: 0;
+    }
+  }
+  li {
+    list-style-type: none;
+  }
+}
+.even {
+  background-color: #91AA9D;
+}
+.odd {
+  background-color: #D1DBBD;
+}
+
+.strains-modal {
+  li {
+    list-style-type: none;
+  }
+  .modal-dialog {
+    width: 75% !important;
+  }
+}
+
+.strains-modal {
+  height: 90vh;
+  overflow: scroll;
+  ul {
+    padding-right: 40px;
+  }
+  li {
+    margin-bottom: 5px;
+  }
+  .modal-header {
+    margin-bottom: 10px;
+    padding-left: 0;
+    padding-right: 0;
+    li {
+      display: inline-block;
+      width: 49%;
+      &:nth-child(2) {
+        text-align: right;
+      }
+    }
+  }
+  .list-info {
+    margin-bottom: 10px;
+    ul {
+      display: inline-block;
+      padding-left: 5px;
+    }
+    li {
+      display: inline-block;
+    }
+    img {
+      margin-bottom: 5px;
+    }
+  }
+}
+
+
+
+
+
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
