final-project mvp 1.0

--- a/final-project/app/home/home.less
+++ b/final-project/app/home/home.less
@@ -3,7 +3,10 @@
 
 .home-view {
   text-align: center;
+  overflow: hidden;
   img {
+    max-width: 640px;
+    width: 90%;
     margin: 0 auto;
   }
 }
