--- a/final-project/app/strains/view/strains-modal-view.html
+++ b/final-project/app/strains/view/strains-modal-view.html
@@ -71,6 +71,14 @@
         </li>
       </ul>
     </li>
+    <li class="list-info">
+      <!--<b>Negatives:</b>-->
+      <ul class="graph">
+        <li>
+          <img data-ng-src="{{strainName.testGraph}}" alt=""/>
+        </li>
+      </ul>
+    </li>
 
   </ul>
 
