--- a/final-project/app/contact/contact.less
+++ b/final-project/app/contact/contact.less
@@ -37,12 +37,33 @@ form {
   }
   input {
     &[type="submit"] {
-      margin-top: 15px auto 0 auto;
+      margin: 15px auto 0 auto;
       background-color: #323C48;
       color: #E3DFE3;
       border: none;
       padding: 15px;
       text-transform: uppercase;
+    }
+  }
+
+}
+
+
+@media screen and (max-width: 600px){
+  form {
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+    padding: 25px;
+    input,
+    textarea {
+      width: 100%;
+    }
+  }
+  .contact-view {
+    .message-preview {
+      width: 100%;
+      display: block;
     }
   }
 
