--- a/final-project/app/framework/components/navigation/navigation-module.less
+++ b/final-project/app/framework/components/navigation/navigation-module.less
@@ -10,6 +10,10 @@
   h1 {
     display: inline-block;
     width: 49%;
+    padding-left: 55px;
+  }
+  ul {
+    padding-right: 30px;
   }
   li {
     display: inline-block;
@@ -22,5 +26,29 @@
     display: inline-block;
     text-align: right;
     width: 49%;
+  }
+}
+@media screen and (max-width: 770px){
+  .navigation-view {
+    h1 {
+      padding-left: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 600px){
+  .navigation-view {
+    text-align: center;
+    h1 {
+      width: 100%;
+      display: block;
+      font-size: 20px;
+      padding-left: 0;
+    }
+    .nav-list {
+      width: 100%;
+      display: block;
+      text-align: center;
+    }
   }
 }
