--- a/final-project/app/framework/components/navigation/view/navigation-view.html
+++ b/final-project/app/framework/components/navigation/view/navigation-view.html
@@ -1,4 +1,4 @@
-<div class="navigation-view" data-ng-controller="navController as navCtrl">
+<header class="navigation-view" data-ng-controller="navController as navCtrl">
   <h1>Marijuana Strain Info</h1>
 
   <ul class="nav-list">
@@ -12,4 +12,4 @@
 
     </li>
   </ul>
-</div>
+</header>
