--- a/final-project/app/strains/strains-module.less
+++ b/final-project/app/strains/strains-module.less
@@ -4,7 +4,7 @@
 .strains-view {
   ul {
     width: 19%;
-    margin: 0 14px 10px 0;
+    margin: 0 10px 10px 0;
     display: inline-block;
     border: 1px solid #000;
     border-radius: 12px;
@@ -26,14 +26,7 @@
   background-color: #D1DBBD;
 }
 
-.strains-modal {
-  li {
-    list-style-type: none;
-  }
-  .modal-dialog {
-    width: 75% !important;
-  }
-}
+
 
 .strains-modal {
   height: 90vh;
@@ -43,6 +36,10 @@
   }
   li {
     margin-bottom: 5px;
+    list-style-type: none;
+  }
+  .modal-dialog {
+    width: 75% !important;
   }
   .modal-header {
     margin-bottom: 10px;
@@ -69,28 +66,42 @@
       margin-bottom: 5px;
     }
   }
+  .graph {
+    img {
+      width: 100%;
+    }
+  }
+}
+
+@media screen and (max-width: 770px){
+  .strains-view {
+    ul {
+      margin: 0 5px 10px 0;
+    }
+  }
 }
 
 
-
-
-
-.hvr-grow {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
+@media screen and (max-width: 600px){
+  .strains-view {
+    text-align: center;
+    ul {
+      width: 33%;
+      margin: 0 0 10px 0;
+      height: 140px;
+      vertical-align: top;
+    }
+  }
+  .strains-modal {
+    .modal-header {
+      h2 {
+        font-size: 16px;
+      }
+    }
+    .list-info {
+      ul {
+        padding-left: 0;
+      }
+    }
+  }
 }
-.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
-
