--- a/final-project/app/strains/view/strains-view.html
+++ b/final-project/app/strains/view/strains-view.html
@@ -10,7 +10,7 @@
           data-ng-class-even="'even'"
           data-ng-class-odd="'odd'"
           class="animated flipInX">
-        <div data-ng-class="{flip : hover}"
+        <div data-ng-class="{wobble : hover}"
              data-ng-mouseenter="hover = true"
              data-ng-mouseleave="hover = false"
             class="animated card">
